# py-fl-manager

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  liccheck.ini  pyproject.toml  sonar-project.properties
config/: dependencies.env  uv.env
devops/containers/: Dockerfile  Dockerfile.dockerignore
docs/: mkdocs.yml
docs/docs/: acknowledgements.md
docs/docs/learn/: index.md
docs/docs/learn/examples/: index.md
docs/docs/reference/: index.md
docs/docs/reference/core/components/: index.md
docs/docs/reference/core/components/checkers/: index.md  is_instance.md
docs/docs/reference/core/components/datasets/: index.md
docs/docs/reference/core/components/distributors/: dirichlet.md  iid.md  index.md
docs/docs/reference/core/components/formatters/: column_dropper.md  column_explode.md  column_rename.md  dict_extractor.md  index.md
docs/docs/reference/core/components/models/: index.md
docs/docs/reference/core/components/preprocessors/: index.md
docs/docs/reference/core/components/readers/: index.md  local.md
docs/docs/reference/core/components/splitters/: index.md  proportion.md  stratified.md
docs/docs/reference/core/components/validators/: base_pandera.md  index.md
docs/docs/reference/core/dataflows/: dataset_setup.md
docs/docs/reference/core/executors/: index.md
docs/docs/reference/core/executors/nv/: nvflare_client_api_executor.md
docs/docs/reference/core/registry/: index.md  meta_registry.md
docs/docs/reference/core/runners/: base.md  index.md
docs/docs/reference/core/schemas/: all_dataset.md  fl_config.md  registry_item.md
docs/docs/reference/core/utils/: composite_utils.md  df_utils.md  import_utils.md  nvflare_utils.md  typing_utils.md
docs/docs/reference/extensions/lightning/components/callbacks/: ditto.md  fed_avg.md  fed_bn.md  fed_opt.md  fed_prox.md  index.md
docs/docs/reference/extensions/lightning/components/datamodule/: default.md  index.md  tokenizer.md
docs/docs/reference/extensions/lightning/dataflows/: base_lightning_trainer.md
docs/docs/reference/extensions/lightning/executors/: index.md  stateful_lightning_fl_executor.md  stateless_ditto_lightning_fl_executor.md  stateless_lightning_fl_executor.md
docs/docs/reference/extensions/lightning/executors/nv/: nvflare_lightning_executor.md  stateful_nvflare_lightning_executor.md  stateless_ditto_nvflare_lightning_executor.md  stateless_nvflare_lightning_executor.md
docs/docs/reference/extensions/lightning/utils/: lightning_callback_wrapper.md  lightning_utils.md
docs/docs/reference/integrations/components/datasets/torch/: torch_dataframe_transforms_dataset.md
docs/docs/reference/integrations/components/formatters/pillow/: image_path_to_bytes.md
docs/docs/reference/integrations/components/models/lightning/: batch_norm_le_net_5.md  mnist_mobile_net.md  modern_le_net_5.md  tiny_bert_classifier.md
docs/docs/reference/integrations/components/preprocessors/torchvision/: bytes_to_tensor.md  pil_image_to_tensor.md  tensor_normalization.md
docs/docs/reference/integrations/components/readers/huggingface/: huggingface.md
docs/docs/reference/utils/job_generator/: job_creator.md
docs/docs/reference/utils/job_generator/federated_job/: index.md
docs/docs/reference/utils/job_generator/federated_job/pt/: all_pt_fed_job.md  all_pt_federated_job.md  index.md
docs/docs/reference/utils/job_generator/schemas/: client_config.md  job_config.md
docs/docs/reference/utils/nvflare_extensions/nv/executors/: base_weight_initializer_executor.md
docs/docs/reference/utils/nvflare_extensions/nv/workflows/: base_controller.md  base_controller_with_client_selection.md  model_export_controller.md  pfl_model_export_controller.md
docs/docs/reference/utils/nvflare_extensions/pt/executors/: pt_weight_initializer_executor.md
docs/overrides/partials/: copyright.html
examples/nvflare_mnist/: docker-compose.yml  project.yml
examples/nvflare_mnist/sag_pt__mnist_example/: meta.conf
examples/nvflare_mnist/sag_pt__mnist_example/app/config/: config_fed_client.json  config_fed_server.json
examples/nvflare_mnist/sag_pt__mnist_example/app/custom/: config.json  runner.py
notebooks/: components_schemas.ipynb  data_distribution.ipynb  dataset_formatter.ipynb  job_generation.ipynb
scripts/docs/: gen_examples.py  gen_index.py  gen_release_notes.py
