[project]
name = "fl-manager"
version = "0.1.0"
description = "fl-manager meta-package"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
  { name = "Xin Lin", email = "xlin@itg.es" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python",
  "Typing :: Typed",
  "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/public-itg/py-fl-manager"

[tool.uv.workspace]
members = [
  "packages/fl-manager-core",
  "packages/fl-manager-integrations/components/datasets/fl-manager-components-datasets-torch",
  "packages/fl-manager-integrations/components/models/fl-manager-components-models-lightning",
  "packages/fl-manager-integrations/components/preprocessors/fl-manager-components-preprocessors-torchvision",
  "packages/fl-manager-integrations/components/readers/fl-manager-components-readers-huggingface",
  "packages/fl-manager-integrations/components/formatters/fl-manager-components-formatters-pillow",
  "packages/fl-manager-lightning",
  "packages/fl-manager-utils/fl-manager-utils-job-generator",
  "packages/fl-manager-utils/fl-manager-utils-nvflare-extensions",
]

[tool.uv.sources]
fl-manager-core = { workspace = true }
fl-manager-components-datasets-torch = { workspace = true }
fl-manager-components-models-lightning = { workspace = true }
fl-manager-components-preprocessors-torchvision = { workspace = true }
fl-manager-components-readers-huggingface = { workspace = true }
fl-manager-components-formatters-pillow = { workspace = true }
fl-manager-lightning = { workspace = true }
fl-manager-utils-job-generator = { workspace = true }
fl-manager-utils-nvflare-extensions = { workspace = true }

[project.optional-dependencies]
standard = [
  "fl-manager-core==0.*",
  "fl-manager-utils-nvflare-extensions==0.*",
]
all = [
  "fl-manager-core==0.*",
  "fl-manager-components-datasets-torch==0.*",
  "fl-manager-components-models-lightning==0.*",
  "fl-manager-components-preprocessors-torchvision==0.*",
  "fl-manager-components-readers-huggingface==0.*",
  "fl-manager-components-formatters-pillow==0.*",
  "fl-manager-lightning==0.*",
  "fl-manager-utils-job-generator==0.*",
  "fl-manager-utils-nvflare-extensions==0.*",
]

[dependency-groups]
dev = [
  "ipywidgets>=8.1.5",
  "jupyterlab>=4.3.1",
  "liccheck>=0.9.2",
  "matplotlib>=3.10.1",
  "pip-licenses>=5.0.0",
  "pyright>=1.1.399",
  "torchviz>=0.0.3",
]
test = [
  "pytest>=8.3.3",
  "pytest-cov>=6.0.0",
  "pytest-mock>=3.14.1",
]
docs = [
  "black>=24.10.0",
  "griffe-typingdoc>=0.2.7",
  "mdx-include>=1.4.2",
  "mkdocs-gen-files>=0.5.0",
  "mkdocs-jupyter>=0.25.1",
  "mkdocs-material>=9.5.44",
  "mkdocstrings[python]>=0.26.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Include a dummy file so the build doesn’t fail
include = ["README.md"]

[tool.hatch.build.targets.sdist]
include = ["README.md"]

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B"]

# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]

# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in selected subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.format]
# 5. Use single quotes in `ruff format`.
quote-style = "single"
skip-magic-trailing-comma = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
changelog_incremental = true
